# aDTN-lite

./: .gitmodules  Bundle  CMakeLists.txt  Utils  aDTN-lite.pu  main.cpp
AppManager/: AppManager.cpp  AppManager.h  Application.cpp  Application.h
Executor/: Code.h  Executor.h
Executor/Backend/: Backend.h  ClangBackend.cpp  ClangBackend.h
Executor/CompilerBackend/: ClangCompilerBackend.cpp  ClangCompilerBackend.h  CompilerBackend.h
Executor/ExecBackend/: ExecBackend.h  eBPFExecBackend.h  ubpf_vm
Executor/tests/: ExecutorTest.cpp
NeighborDiscoverer/: Beacon.cpp  Beacon.h  NbsTable.cpp  NbsTable.h  Neighbor.h  NeighborDiscoverer.cpp  NeighborDiscoverer.h
